JDK 14 is no longer in preview, hence --preview needs to go.